--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,11 +8,11 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
-composeBom = "2024.12.01"
+activityCompose = "1.10.0"
+composeBom = "2025.02.00"
 hilt = "2.51"
 serialization = "1.6.3"
-composeNavigation = "2.8.0-alpha08"
+composeNavigation = "2.8.7"
 retrofit = "2.10.0"
 okhttp = "4.12.0"
 coilCompose = "2.3.0"
