--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,12 +18,18 @@ coilCompose = "2.3.0"
 mockk = "1.13.2"
 turbine = "1.0.0"
 coroutinesTest = "1.6.4"
+ksp = "2.0.21-1.0.27"
+roomRuntime = "2.6.1"
 
 hiltNavigationCompose = "1.2.0"
 window = "1.3.0"
 kotestRunnerJunit5JvmVersion = "4.6.0"
 
 [libraries]
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
+
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
 core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "coreVersion" }
@@ -58,6 +64,7 @@ androidx-material3-window-size-android = { module = "androidx.compose.material3:
 kotest-runner-junit5-jvm = { group = "io.kotest", name = "kotest-runner-junit5-jvm", version.ref = "kotestRunnerJunit5JvmVersion" }
 
 [plugins]
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 dagger-hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 android-application = { id = "com.android.application", version.ref = "agp" }
